Card image overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,7 @@ body {
 .card-img {
   width: 100%;
   height: 10rem;
-  overflow: hidden;
-  background: rebeccapurple;
-}
-.card-img img {
-  width: 100%;
+  object-fit: cover;
 }
 .mui-btn.mui-btn--fab {
   font-size: 1.8rem;
